--- a/AboutMe/project.html
+++ b/AboutMe/project.html
@@ -21,7 +21,7 @@
                     <a href="./main.html">Main</a>
                     <a href="./resume.html">Resume</a>
                     <a href="./project.html">Project</a>
-                    <a href="./introduce.html">introduce</a>
+                    <a href="./interview.html">Interview</a>
                 </div>
                 <!-- lnb -->
                 <div class="lnb">
