--- a/AboutMe/interview.html
+++ b/AboutMe/interview.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>introduce</title>
+    <title>Interview</title>
     <link rel="stylesheet" href="./css/header.css">
     <style>
         h1{text-align: center; color: lightslategrey;}
-        .interview{width: 1800px; height: 1000px; margin-left: 50px;}
         .qna{
             border: 1px solid #ff8868; border-radius: 10px; 
             width: 500px; height: 300px; margin: 20px 20px;
@@ -39,8 +38,7 @@
             </nav>
         </header>
         <section>
-            <h1>저에 대해서 더 알려드릴게요</h1>
-            <div class="interview">
+            <h1>저에 대해서 더 알려드릴게요</h1> 
             <div class="qna">
                 <p class="que">Q. 프론트엔드 개발자를 왜 희망하나요?</p>
                 <p class="ans"> <mark class="mark">기술이 있는 사람</mark>이 되고싶었습니다.<br>
@@ -87,6 +85,7 @@
                                   7년차~: 후배양성과 꾸준한 자기계발로 성장하는 개발자가 되기 
                             </p>
             </div>
+            
                 <!-- <div class="contact">
                     <p class="more">저에 대해서 더 궁금하시다면 연락주세요!</p>
                     <p class="tel"> TEL : 010.4251.6727 </p>
