--- a/AboutMe/project.html
+++ b/AboutMe/project.html
@@ -7,7 +7,11 @@
     <title>Project</title>
     <link rel="stylesheet" href="./css/header.css">
     <style>
-        
+        .container2{
+            margin: 0 auto;
+            width: 100%; height: 1000px;
+            background-color: whitesmoke;
+        }
     </style>
 </head>
 <body>
@@ -29,6 +33,11 @@
                 </div>
             </nav>
         </header>
+        <section>
+            <div class="container2">
+                
+            </div>
+        </section>
     </div>
 </body>
 </html>
