--- a/AboutMe/project.html
+++ b/AboutMe/project.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="./css/header.css">
     <style>
         .container2{
-            margin: 0 auto;
-            width: 100%; height: 1000px;
-            background-color: whitesmoke;
+            margin: 0 auto; width: 1000px; height: 600px; 
+            margin-top: 50px; position: relative;
         }
     </style>
 </head>
