--- a/AboutMe/project.html
+++ b/AboutMe/project.html
@@ -10,6 +10,7 @@
         .container2{
             margin: 0 auto; width: 1000px; height: 600px; 
             margin-top: 50px; position: relative;
+            border: 1px dashed #ff8868; border-radius: 10px;
         }
     </style>
 </head>
@@ -21,10 +22,10 @@
             <nav>
                 <!-- gnb -->
                 <div class="gnb">
-                    <a href="./main.html">Main</a>
-                    <a href="./resume.html">Resume</a>
-                    <a href="./project.html">Project</a>
-                    <a href="./interview.html">Interview</a>
+                    <a class="nav_list" href="./main.html">Main</a>
+                    <a class="nav_list" href="./resume.html">Resume</a>
+                    <a class="nav_list" href="./project.html">Project</a>
+                    <a class="nav_list" href="./interview.html">Interview</a>
                 </div>
                 <!-- lnb -->
                 <div class="lnb">
