--- a/AboutMe/interview.html
+++ b/AboutMe/interview.html
@@ -11,15 +11,86 @@
             margin: 0 auto; width: 1000px; height: 600px; 
             margin-top: 50px; position: relative;
         }
-        h1{text-align: center; color: lightslategrey;}
-        /* 아코디언형식으로 만들기 */
-        .qna{
-            border: 1px dashed #ff8868; border-radius: 10px; 
-            width: 650px; height: 400px; margin: 20px 20px;
-            float: left; 
+        html {font-size: 62.5%;}
+        h5,p {margin: 0;}
+        a {text-decoration: none; color: inherit;}
+        ul {list-style: none;}
+        body { margin: 0; padding: 0;}
+        .target {
+            display: block;
+            top: 0; left: 0; position: fixed;
+                }
+        .open-accordion {
+        display: block;
         }
-        .que{ font-size: 20px; font-weight: bold; color: lightslategray; text-align: center;}
-        .ans{ font-size: 15px; color: black; text-align: center; margin: 20px;}
+        .close-accordion {
+        display: none;
+        }
+        :target ~ .open-accordion {
+        display: none;
+        }
+        :target ~ .close-accordion {
+        display: block;
+        }
+
+        .accordion {
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+        }
+        .accordion__li {
+        width: 45rem;
+        background: white;
+        border-radius: 0.4rem;
+        padding: 2rem;
+        }
+
+        .accordion__li a > div {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        cursor: pointer;
+        }
+        .accordion__li a > div div {
+        display: flex;
+        align-items: center;
+        }
+        .accordion__num {
+        font-size: 1.8rem;
+        margin-right: 1.3rem;
+        }
+        .accordion__title {
+        font-size: 1.6rem;
+        }
+        .accordion__li i {
+        font-size: 1.3rem;
+        position: relative;
+        top: 0.1rem;
+        right: 0.5rem;
+        }
+
+        /* When accordion is open */
+
+        .accordion__content-container {
+        max-height: 0;
+        overflow: hidden;
+        transition: all 0.3s ease-in-out;
+        }
+        :target ~ .accordion__content-container {
+        max-height: 20rem; /* set it longer than expected height of content */
+        }
+
+        .accordion__content {
+        font-size: 1.6rem;
+        line-height: 1.5;
+        transform: translateY(-100%);
+        transition: all 0.3s ease-in-out;
+        }
+        :target ~ .accordion__content-container .accordion__content {
+        padding-top: 1rem;
+        transform: translateY(0);
+        }
+        h1{text-align: center; color: lightslategrey;}
         .mark{background: linear-gradient(180deg,rgba(255,255,255,0) 50%, #f7d5a2 50%);}
     </style>
 </head>
@@ -31,10 +102,10 @@
             <nav>
                 <!-- gnb -->
                 <div class="gnb">
-                    <a href="./main.html">Main</a>
-                    <a href="./resume.html">Resume</a>
-                    <a href="./project.html">Project</a>
-                    <a href="./interview.html">Interview</a>
+                    <a class="nav_list" href="./main.html">Main</a>
+                    <a class="nav_list" href="./resume.html">Resume</a>
+                    <a class="nav_list" href="./project.html">Project</a>
+                    <a class="nav_list" href="./interview.html">Interview</a>
                 </div>
                 <!-- lnb -->
                 <div class="lnb">
@@ -45,58 +116,102 @@
         <section>
             <div class="container2">
             <h1>More about ME</h1> 
-            <div class="qna">
-                <p class="que">Q. 프론트엔드 개발자를 왜 희망하나요?</p>
-                <p class="ans"> <mark class="mark">기술이 있는 사람</mark>이 되고싶었습니다.<br>
-                                  다양한 어플과 웹페이지를 이용하면서 깔끔한 디자인과 기능을 볼 때마다 '이건 어떻게 만들었지?' 라는 궁금증이 많았습니다. 
-                                  저의 끝없는 호기심은 IT업계에 대한 관심으로 이어졌고, 상상한대로 구현해내는 프론트엔드 개발에 도전하게 되었습니다. 
-                                  이제는 이미 만들어진 어플과 웹사이트를 이용하는 사람이 아닌 제가 스스로 기획하고 구현해내는 프론트엔드 개발자가 되어 많은 사람들에게 
-                                  깔끔하고 효과적인 앱/웹 서비스를 제공하고 싶습니다. </p>
-            </div>
-            <div class="qna">
-                <p class="que">Q. 어떤 노력을 했나요?</p>
-                <p class="ans">   <mark class="mark">학원 개강 전</mark><br>출퇴근 시간을 활용해 강의를 들으며 기초 지식을 쌓았습니다.<br> 
-                                  같은 영상을 여러번 보며 이해될 때까지 공부했고 여러 무료 프로그램을 통해 사이트를 만들기도 하며 코딩에 익숙해지도록 노력했습니다.<br> 
-                                  <mark class="mark">학원 개강 후</mark><br>매일 복습, 복슴한 내용을 블로그에 올리며 한 번 더 복습, 팀 프로젝트와 개인 프로젝트를 하면서
-                                  공부한 내용을 잊지 않도록 열심히 공부하고있습니다. </p>
-            </div>
-            <div class="qna">
-                <p class="que">Q. 어떤 어려운 점이 있었나요?</p>
-                <p class="ans">  <mark class="mark">비전공자의 고군분투</mark><br>IT, 컴퓨터공학, 코딩 모두 처음 접하는 분야다 보니 정보를 얻는 부분에서 어려움을 많이 느꼈습니다.
-                                  그래서 유튜브, 인프런, 관련도서 등 다양한 플랫폼을 통해 IT업계에 익숙해지도록 노력했고 IT업계에 종사하는 지인들과도 자주 만나며
-                                  업계환경과 근무지식, 필요한 자질 등 다양한 방면에서 정보를 얻기위해 노력했습니다.
-                </p>
-            </div>
-            <div class="qna">
-                <p class="que">Q. 본인의 강점이 무엇인가요?</p>
-                <p class="ans"> 저의 가장 큰 강점은 <mark class="mark">마음먹은 것은 무조건 이뤄낸다</mark>는 것입니다.<br>저는 목표가 생기면 이뤄낼 수 있도록 최선을 다합니다. 
-                                  또한 다양한 대외활동과 서비스직 근무경험을 토대로 <mark class="mark">커뮤니케이션 능력과 팀워크 경력</mark>이 많습니다. 
-                                  개발자 또한 기획자, 고객사 등 다양한 사람들과 소통하고 협업해야하기때문에 저의 이러한 경험들이 큰 도움이 될 것이라 생각합니다.  
-                </p>
-            </div>
-            <div class="qna">
-                <p class="que">Q. 구현하고 싶은 프로젝트가 있나요?</p>
-                <p class="ans">1. <mark class="mark">한국관광안내 프로그램</mark> <br> 한류의 세계화가 점점 빨라지고 있는 시대에 맞춰 외국인들이 
-                                  한국여행을 더 알차게 할 수 있도록 정보를 제공해주는 웹페이지나 어플을 구현해보고 싶습니다.<br>
-                               2. <mark class="mark">외국인 친구 만드는 프로그램</mark><br>
-                                  중국 어학연수 기간동안 약 20여개국의 외국인 친구를 사귀며 더 많은 외국인 친구들과 교류하고 싶었습니다. 프로그램 내의 언어교환, 문화교류 등 다양한 <br>기능을 통해
-                                  세계화에 한발짝 더 다가가고 싶습니다.    
-                            </p>
-            </div>   
-            <div class="qna">
-                <p class="que">Q. 앞으로의 목표는 무엇인가요?</p>
-                <p class="ans"> 저의 가장 큰 목표는 <mark class="mark">'대체할 수 없는 사람'</mark>이 되는 것입니다.<br>
-                                  1~3년차: 개발 기초, 실무 지식을 쌓고 업무에 익숙해지도록 노력하기<br>
-                                  4~6년차: 업무에 대한 전문성을 높이고 기술 실력 향상을 위해 힘쓰기<br> 
-                                  7년차~: 후배양성과 꾸준한 자기계발로 성장하는 개발자가 되기 
-                            </p>
-            </div>
-            
-                <!-- <div class="contact">
-                    <p class="more">저에 대해서 더 궁금하시다면 연락주세요!</p>
-                    <p class="tel"> TEL : 010.4251.6727 </p>
-                    <p class="email"><a href="mailto:jylee1501@naver.com"> 바로 메일 전송하기 -> jylee1501@naver.com</a></p>
-                </div> -->
+            <ul class="accordion">
+                <span class="target" id="accordion"></span>
+                <li class="accordion__li">
+                  <span class="target" id="accordion1"></span>
+                  <a href="#accordion1" class="open-accordion" title="open">
+                    <div>
+                      <div>
+                        <span class="accordion__num">01</span>
+                        <h5 class="accordion__title">
+                          프론트엔드 개발자 지원동기
+                        </h5>
+                      </div>
+                      <i class="fas fa-chevron-down"></i>
+                    </div>
+                  </a>
+                  <a href="#accordion" class="close-accordion" title="close">
+                    <div>
+                      <div>
+                        <span class="accordion__num">01</span>
+                        <h5 class="accordion__title">프론트엔드 개발자 지원동기</h5>
+                      </div>
+                      <i class="fas fa-chevron-up"></i>
+                    </div>
+                  </a>
+                  <div class="accordion__content-container">
+                    <p class="accordion__content">
+                        다양한 어플과 웹페이지를 이용하면서 깔끔한 디자인과 기능을 볼 때마다 '이건 어떻게 만들었지?' 라는 궁금증이 많았습니다. 
+                        저의 끝없는 호기심은 IT업계에 대한 관심으로 이어졌고, 상상한대로 구현해내는 프론트엔드 개발에 도전하게 되었습니다. 
+                        이제는 이미 만들어진 어플과 웹사이트를 이용하는 사람이 아닌 제가 스스로 기획하고 구현해내는 프론트엔드 개발자가 되어 많은 사람들에게 
+                        깔끔하고 효과적인 앱/웹 서비스를 제공하고 싶습니다.
+                    </p>
+                    <div>
+                </li>
+                <li class="accordion__li">
+                  <span class="target" id="accordion2"></span>
+                  <a href="#accordion2" class="open-accordion" title="open">
+                    <div>
+                      <div>
+                        <span class="accordion__num">02</span>
+                        <h5 class="accordion__title">
+                          공부 방법
+                        </h5>
+                      </div>
+                      <i class="fas fa-chevron-down"></i>
+                    </div>
+                  </a>
+                  <a href="#accordion" class="close-accordion" title="close">
+                    <div>
+                      <div>
+                        <span class="accordion__num">02</span>
+                        <h5 class="accordion__title">
+                            공부 방법
+                        </h5>
+                      </div>
+                      <i class="fas fa-chevron-up"></i>
+                    </div>
+                  </a>
+                  <div class="accordion__content-container">
+                    <p class="accordion__content">
+                        회사에 근무하는 동안은 출퇴근 시간을 활용해 강의를 들으며 기초 지식을 쌓았습니다. 
+                        같은 영상을 여러번 보며 이해될 때까지 공부했고 여러 무료 프로그램을 통해 사이트를 만들기도 하며 코딩에 익숙해지도록 노력했습니다.<br> 
+                        학원 재학 중에는 매일 복습, 복슴한 내용을 블로그에 올리며 한 번 더 복습, 팀 프로젝트와 개인 프로젝트를 하면서
+                        공부한 내용을 잊지 않도록 열심히 공부하고있습니다.
+                    </p>
+                  </div>
+                </li>
+                <li class="accordion__li">
+                  <span class="target" id="accordion3"></span>
+                  <a href="#accordion3" class="open-accordion" title="open">
+                    <div>
+                      <div>
+                        <span class="accordion__num">03</span>
+                        <h5 class="accordion__title">앞으로의 목표</h5>
+                      </div>
+                      <i class="fas fa-chevron-down"></i>
+                    </div>
+                  </a>
+                  <a href="#accordion" class="close-accordion" title="close">
+                    <div>
+                      <div>
+                        <span class="accordion__num">03</span>
+                        <h5 class="accordion__title">앞으로의 목표</h5>
+                      </div>
+                      <i class="fas fa-chevron-up"></i>
+                    </div>
+                  </a>
+                  <div class="accordion__content-container">
+                    <p class="accordion__content">
+                        저의 가장 큰 목표는 <mark class="mark">'대체할 수 없는 사람'</mark>이 되는 것입니다.<br>
+                        1~3년차: 개발 기초, 실무 지식을 쌓고 업무에 익숙해지도록 노력하기<br>
+                        4~6년차: 업무에 대한 전문성을 높이고 기술 실력 향상을 위해 힘쓰기<br> 
+                        7년차~: 후배양성과 꾸준한 자기계발로 성장하는 개발자가 되기
+                    </p>
+                  </div>
+                </li>
+              </ul>
             </div>
             </div>
                
