--- a/AboutMe/main.html
+++ b/AboutMe/main.html
@@ -37,24 +37,14 @@
             <nav>             
                 <!-- gnb -->
                 <div class="gnb">
-                    <a href="./main.html">Main</a>
-                    <a href="./resume.html">Resume</a>
-                    <a href="./project.html">Project</a>
-                    <a href="./interview.html">Interview</a>
+                    <a class="nav_list" href="./main.html">Main</a>
+                    <a class="nav_list" href="./resume.html">Resume</a>
+                    <a class="nav_list" href="./project.html">Project</a>
+                    <a class="nav_list" href="./interview.html">Interview</a>
                 </div>
-                <!-- lnb -->
-                <!-- <div class="lnb">
-                    <a target="_blank" href="https://github.com/jjungyoon06/jungyoon">
-                        <img class="foto" src="./img/GitHub-Mark.png" alt="git">
-                    </a>
-                    <a target="_blank" href="https://blog.naver.com/jylee1501">
-                        <img class="foto" src="./img/blog.png" alt="blog">
-                    </a>
-                    <a target="_blank" href="https://www.notion.so/Start-939c43033a024eb0bc512037cdb6d99c">
-                        <img class="foto" src="./img/Notion_app_logo.png" alt="notion">
-                    </a>
+                <div class="lnb">
                     <a target="_blank" href="mailto:jylee1501@naver.com">jylee1501@naver.com</a>
-                </div> -->
+                </div>
             </nav>
         </header>
         <section>
