--- a/AboutMe/resume.html
+++ b/AboutMe/resume.html
@@ -76,10 +76,10 @@
             <nav>
                 <!-- gnb -->
                 <div class="gnb">
-                    <a href="./main.html">Main</a>
-                    <a href="./resume.html">Resume</a>
-                    <a href="./project.html">Project</a>
-                    <a href="./interview.html">Interview</a>
+                    <a class="nav_list" href="./main.html">Main</a>
+                    <a class="nav_list" href="./resume.html">Resume</a>
+                    <a class="nav_list" href="./project.html">Project</a>
+                    <a class="nav_list" href="./interview.html">Interview</a>
                 </div>
                 <!-- lnb -->
                 <div class="lnb">
