--- a/Chrome/index.html
+++ b/Chrome/index.html
@@ -9,32 +9,31 @@
   <body>
     <h2 id="clock">00:00:00</h2>
     <form class="hidden" id="login-form">
-      <input
+        <input
         required
         maxlength="15"
         type="text"
-        placeholder="What is your name?"
-/>
-<input type="submit" value="Log In" />
-</form>
-<h1 class="hidden" id="greeting"></h1>
+        placeholder="What is your name?"/>
+        <input type="submit" value="Log In" />
+    </form>
+    <h1 class="hidden" id="greeting"></h1>
 <form id="todo-form">
-<input type="text" placeholder="Write a To Do and Press Enter" required />
+    <input type="text" placeholder="Write a To Do and Press Enter" required />
 </form>
-<ul id="todo-list"></ul>
-<div id="quote">
-<span></span>
-<span></span>
-</div>
-<div id="weather">
-<span></span>
-<span></span>
-</div>
-<script src="js/greetings.js"></script>
-<script src="js/clock.js"></script>
-<script src="js/quotes.js"></script>
-<script src="js/background.js"></script>
-<script src="js/todo.js"></script>
-<script src="js/weather.js"></script>
+    <ul id="todo-list"></ul>
+    <div id="quote">
+        <span></span>
+        <span></span>
+    </div>
+    <div id="weather">
+        <span></span>
+        <span></span>
+    </div>
+    <script src="js/greetings.js"></script>
+    <script src="js/clock.js"></script>
+    <script src="js/quote.js"></script>
+    <script src="js/background.js"></script>
+    <script src="js/todolist.js"></script>
+    <script src="js/weather.js"></script>
 </body>
 </html>
