--- a/MEME-MAKER/index.html
+++ b/MEME-MAKER/index.html
@@ -8,11 +8,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-        <canvas></canvas>
-        <input id="line-width" type="range" min="1" max="10" value="5" step="0.5">
-        <input type="color" id="color">
-        <div>
-          <div
+    <div class="color-options">
+        <input type="color" id="color">    
+    <div
       class="color-option"
       style="background-color: #1abc9c"
       data-color="#1abc9c"
@@ -72,11 +70,18 @@
         style="background-color: #e67e22"
         data-color="#e67e22"
       ></div>  
-        </div>
-        <button id="mode-btn">Fill</button>
-        <button id="destroy-btn">Destroy</button>
-        <button id="eraser-btn">Erase</button>
-        <input type="file" accept="image/*" id="file">
+            </div>
+        <canvas></canvas> 
+            <div class="btns">
+                <input id="line-width" type="range" min="1" max="10" value="5" step="0.5">
+                <button id="mode-btn">Fill</button>
+                <button id="destroy-btn">Destroy</button>
+                <button id="eraser-btn">Erase</button>
+                <label for="file">Add Photo<input type="file" accept="image/*" id="file"></label>
+                <!-- file input은 css가 번거로워서 label을 따로 만들어 진행, label의 for과 input의 id 이름이 같으면 input 실행됨 -->
+                <input type="text" placeholder="Write and double click" id="text">
+                <button id="save">Save image</button>
+            </div>
         <script src="./js/mouse_painting.js"></script>
 </body>
 </html>
