--- a/kokoaclone/chats.html
+++ b/kokoaclone/chats.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friends - Kokoa Clone</title>
+    <title>Chats - Kokoa Clone</title>
     </head>
     <body>
       <div class="status-bar">
@@ -22,9 +22,10 @@
       </div>
     </div>
     <header class="screen-header">
-        <h1 class="screen-header__title">Friends</h1>
+        <h1 class="screen-header__title">Chats</h1>
         <div class="screen-header__icon">
             <span><i class="fas fa-search fa-lg"></i></span>
+            <span><i class="far fa-comment-dots fa-lg"></i></span>
             <span><i class="fa-solid fa-music fa-lg"></i></span>
             <span><i class="fas fa-cog fa-lg"></i></span>
         </div>
@@ -34,38 +35,23 @@
     <main class="main-screen">
         <div class="user-component">
             <div class="user-component__column">
-            <img src="./image/4.jpg" class="user-component__avatar user-component__avatar--xl"/>
+            <img src="./image/4.jpg" class="user-component__avatar user-component__avatar"/>
                  <div class="user-component__text">
                      <h4 class="user-component__title">Jungyoon</h4>
-                     <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
-                 </div>
-             </div>
-       <div class="user-component_column"></div>
-    </div>
-    <div class="friends-screen__channel">
-        <div class="friends-screen__channel-header">
-            <span>Channel</span><i class="fas fa-chevron-up fa-xs"></i>
-        </div>
-        <div class="user-component">
-            <div class="user-component__column">
-            <img src="./image/4.jpg" class="user-component__avatar user-component__avatar--sm"/>
-                 <div class="user-component__text">
-                     <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
+                     <h6 class="user-component__subtitle">Please check my Kokoa Account Info</h6>
                  </div>
              </div>
        <div class="user-component_column">
-            <span>2</span>
-            <i class="fas fa-chevron-right fa-xs"></i>  
+        <span>21:22</span>
        </div>
-    </div>
     </div>
     </main>
     
     <nav class="nav">
         <ul class="nav__list">
-            <li class="nav__btn"><a class="nav__link" href="./friends.html"><i class="fas fa-user fa-2x"></i></a></li>
-            <li class="nav__btn"><a class="nav__link" href="./chats.html"><span class="nav_notification badge">1</span>
-            <i class="far fa-comment fa-2x"></i></a> </li>
+            <li class="nav__btn"><a class="nav__link" href="./friends.html"><i class="far fa-user fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="./chats.html"><span class="nav_notification">1</span>
+                <i class="fa-solid fa-comment fa-2x"></i></a> </li>
             <li class="nav__btn"><a class="nav__link" href="./find.html"><i class="fas fa-search fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="./more.html"><div class="nav_option"></div><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
