--- a/kokoaclone/friends.html
+++ b/kokoaclone/friends.html
@@ -54,8 +54,10 @@
                  </div>
              </div>
        <div class="user-component_column">
+        <div>
             <span>2</span>
-            <i class="fas fa-chevron-right fa-xs"></i>  
+            <i class="fas fa-chevron-right fa-xs"></i> 
+        </div>   
        </div>
     </div>
     </div>
