--- a/kokoaclone/chats.html
+++ b/kokoaclone/chats.html
@@ -30,8 +30,6 @@
             <span><i class="fas fa-cog fa-lg"></i></span>
         </div>
     </header>
-    <a id="friends-display-link"> <i class="fas fa-info-circle"></i> Friends' Names Display<i class="fas fa-chevron-right fa-xs"></i></a>
-
     <main class="main-screen">
         <div class="user-component">
             <div class="user-component__column">
@@ -43,6 +41,7 @@
              </div>
        <div class="user-component_column">
         <span>21:22</span>
+        <div class="user-component__time badge">1</div>
        </div>
     </div>
     </main>
@@ -50,7 +49,7 @@
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn"><a class="nav__link" href="./friends.html"><i class="far fa-user fa-2x"></i></a></li>
-            <li class="nav__btn"><a class="nav__link" href="./chats.html"><span class="nav_notification">1</span>
+            <li class="nav__btn"><a class="nav__link" href="./chats.html"><span class="nav_notification badge">1</span>
                 <i class="fa-solid fa-comment fa-2x"></i></a> </li>
             <li class="nav__btn"><a class="nav__link" href="./find.html"><i class="fas fa-search fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="./more.html"><div class="nav_option"></div><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
