--- a/kokoaclone/find.html
+++ b/kokoaclone/find.html
@@ -25,23 +25,46 @@
         <h1 class="screen-header__title">Find</h1>
         <div class="screen-header__icon">
             <span><i class="fas fa-search fa-lg"></i></span>
-            <div class="nav_option"></div><span><i class="fas fa-cog fa-lg"></i></span>
+            <span><a href="./setting.html"><i class="fas fa-cog fa-lg"></i></a></span>
         </div>
     </header>
     <main class="main-screen">
-        <div class="user-component">
-            <div class="user-component__column">
-            <img src="./image/4.jpg" class="user-component__avatar user-component__avatar"/>
-                 <div class="user-component__text">
-                     <h4 class="user-component__title">Jungyoon</h4>
-                     <h6 class="user-component__subtitle">Please check my Kokoa Account Info</h6>
-                 </div>
-             </div>
-       <div class="user-component_column">
-        <span>21:22</span>
-        <div class="user-component__time badge">1</div>
-       </div>
-    </div>
+        <div class="find-icons">
+           <div class="find-icons__icon"><i class="fas fa-qrcode"></i><span>QR</span></div>
+           <div class="find-icons__icon"><i class="far fa-address-book"></i><span>Add by Contact</span></div>
+           <div class="find-icons__icon"><i class="fas fa-fingerprint"></i><span>Add by ID</span></div>
+           <div class="find-icons__icon"><i class="far fa-envelope"></i><span>Invite</span></div>
+        </div>
+        <div class="recommended-friends">
+            <h6 class="recommended-friends__title">recommended Friends</h6>
+            <span>You have no recommended friends.</span>
+        </div>
+        <div class="open-chat">
+            <div class="open-chat__header">
+                <h4>Open Chat</h4>
+                <span>Go to Openchat Home<i class="fas fa-chevron-right fa-xs"></i></span>
+            </div>
+            <div class="open-post">
+                <div class="open-post__column">
+                    <h5 class="open-post__title">#CODE</h5>
+                    <h6 class="open-post__hashtags">#HTML#CSS#JAVASCRIPT</h6>
+                    <div class="open-post__members">
+                        <img src="./image/4.jpg">
+                        <span class="open-post__members-count">902 members</span>
+                        <div class="divider"></div>
+                        <span class="open-post__members-status">Active</span>
+                    </div>
+                </div>
+                <div class="open-post__column">
+                   <div class="open-post__photo">
+                    <img src="./image/4.jpg">
+                        <div class="open-post__heart-count">
+                            <i class="fas fa-heart fa-xs"></i><span>326</span>
+                        </div>
+                   </div>
+                </div>
+            </div>
+        </div>
     </main>
     
     <nav class="nav">
