--- a/kokoaclone/friends.html
+++ b/kokoaclone/friends.html
@@ -26,7 +26,7 @@
         <div class="screen-header__icon">
             <span><i class="fas fa-search fa-lg"></i></span>
             <span><i class="fa-solid fa-music fa-lg"></i></span>
-            <span><i class="fas fa-cog fa-lg"></i></span>
+            <span><a href="./setting.html"><i class="fas fa-cog fa-lg"></i></a></span>
         </div>
     </header>
     <a id="friends-display-link"> <i class="fas fa-info-circle"></i> Friends' Names Display<i class="fas fa-chevron-right fa-xs"></i></a>
