--- a/kokoaclone/setting.html
+++ b/kokoaclone/setting.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chats - Kokoa Clone</title>
+    <title>Setting - Kokoa Clone</title>
     </head>
     <body>
       <div class="status-bar">
@@ -21,38 +21,42 @@
         <i class="fas fa-bolt"></i>
       </div>
     </div>
-    <header class="screen-header">
-        <h1 class="screen-header__title">Chats</h1>
-        <div class="screen-header__icon">
-            <span><i class="fas fa-search fa-lg"></i></span>
-            <span><i class="far fa-comment-dots fa-lg"></i></span>
-            <span><i class="fa-solid fa-music fa-lg"></i></span>
-            <span><a href="./setting.html"><i class="fas fa-cog fa-lg"></i></a></span>
-        </div>
+    <header class="alt-header">
+        <div class="alt-header__column"><a href="./more.html"><i class="fas fa-angle-left fa-3x"></i></a></div>
+        <div class="alt-header__column"><h1 class="alt-header__title">Settings</h1></div>
+        <div class="alt-header__column"><span><i class="fas fa-search fa-lg"></i></span></div>
     </header>
     <main class="main-screen">
-      <a href="./chatting.html">
-        <div class="user-component">
-            <div class="user-component__column">
-            <img src="./image/4.jpg" class="user-component__avatar user-component__avatar"/>
-                 <div class="user-component__text">
-                     <h4 class="user-component__title">Jungyoon</h4>
-                     <h6 class="user-component__subtitle">Please check my Kokoa Account Info</h6>
-                 </div>
-             </div>
-       <div class="user-component_column">
-        <span>21:22</span>
-        <div class="user-component__time badge">1</div>
-       </div>
-    </div>
-    </a>
+        <ul class="settings-list">
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="fas fa-bullhorn"></i>
+                    <span>Notices</span>
+                </div>
+                <div class="settings__setting-column"></div>
+            </li>
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="fas fa-flask"></i>
+                    <span>Kokoa Lab</span> 
+                </div>
+                <div class="settings__setting-column"></div>
+            </li>
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="fas fa-info-circle"></i>
+                    <span>Version</span>
+                </div>
+                <div class="settings__setting-column">Latest Version</div>
+            </li>
+          </ul>
     </main>
     
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn"><a class="nav__link" href="./friends.html"><i class="far fa-user fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="./chats.html"><span class="nav_notification badge">1</span>
-                <i class="fa-solid fa-comment fa-2x"></i></a> </li>
+                <i class="far fa-comment fa-2x"></i></a> </li>
             <li class="nav__btn"><a class="nav__link" href="./find.html"><i class="fas fa-search fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="./more.html"><div class="nav_option"></div><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
