--- a/kokoaclone/find.html
+++ b/kokoaclone/find.html
@@ -70,7 +70,7 @@
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn"><a class="nav__link" href="./friends.html"><i class="far fa-user fa-2x"></i></a></li>
-            <li class="nav__btn"><a class="nav__link" href="./chats.html"><span class="nav_notification badge">1</span>
+            <li class="nav__btn"><a class="nav__link" href="./chats.html"><span class="nav__notification badge">1</span>
                 <i class="far fa-comment fa-2x"></i></a> </li>
             <li class="nav__btn"><a class="nav__link" href="./find.html"><i class="fas fa-search fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="./more.html"><div class="nav_option"></div><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
