--- a/kokoaclone/friends.html
+++ b/kokoaclone/friends.html
@@ -66,12 +66,15 @@
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn"><a class="nav__link" href="./friends.html"><i class="fas fa-user fa-2x"></i></a></li>
-            <li class="nav__btn"><a class="nav__link" href="./chats.html"><span class="nav_notification badge">1</span>
+            <li class="nav__btn"><a class="nav__link" href="./chats.html"><span class="nav__notification badge">1</span>
             <i class="far fa-comment fa-2x"></i></a> </li>
             <li class="nav__btn"><a class="nav__link" href="./find.html"><i class="fas fa-search fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="./more.html"><div class="nav_option"></div><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>
+    <div id="splash-screen">
+        <i class="fas fa-comment"></i>
+    </div>
     <script src="https://kit.fontawesome.com/b9c3c0b1e7.js" crossorigin="anonymous"></script>
   </body>
 </html>
