--- a/kokoaclone/chats.html
+++ b/kokoaclone/chats.html
@@ -57,6 +57,9 @@
             <li class="nav__btn"><a class="nav__link" href="./more.html"><div class="nav_option"></div><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
     <script src="https://kit.fontawesome.com/b9c3c0b1e7.js" crossorigin="anonymous"></script>
   </body>
 </html>
