--- a/kokoaclone/chatting.html
+++ b/kokoaclone/chatting.html
@@ -65,7 +65,9 @@
             </button>
         </div>
     </form>
-    
+    <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+      </div>
     <script src="https://kit.fontawesome.com/b9c3c0b1e7.js" crossorigin="anonymous"></script>
   </body>
 </html>
