--- a/kokoaclone/friends.html
+++ b/kokoaclone/friends.html
@@ -72,6 +72,9 @@
             <li class="nav__btn"><a class="nav__link" href="./more.html"><div class="nav_option"></div><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>
+    <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+      </div>
     <div id="splash-screen">
         <i class="fas fa-comment"></i>
     </div>
