--- a/kokoaclone/index.html
+++ b/kokoaclone/index.html
@@ -33,6 +33,9 @@
       <input type="submit" value="Log In" />
       <a href="#">Find Kokoa Account or Password</a>
     </form>
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
     <script src="https://kit.fontawesome.com/b9c3c0b1e7.js" crossorigin="anonymous"></script>
   </body>
 </html>
