--- a/portfolio/friends.html
+++ b/portfolio/friends.html
@@ -46,7 +46,7 @@
     </div>
     <div class="friends-screen__channel">
         <div class="friends-screen__channel-header">
-            <span>Link friends</span><i class="fas fa-chevron-up fa-xs"></i>
+            <span>Link friends (5)</span><i class="fas fa-chevron-up fa-xs"></i>
         </div>
         <div class="user-component">
             <div class="user-component__column">
@@ -88,10 +88,21 @@
                         <h4 class="user-component__title user-component__title--not-bold">Linkedin</h4>
                     </div>
              </div>        
-       <div class="user-component_column">
+        <div class="user-component_column">
             <a href="https://www.linkedin.com/in/%EC%A0%95%EC%9C%A4-%EC%9D%B4-ab062724a/">Linked in 바로 가기</a>
-       </div>
-    </div>
+        </div>
+        </div>
+        <div class="user-component">
+            <div class="user-component__column">
+                <img src="./image/qrcode.jpeg" class="user-component__avatar user-component__avatar--sm"/>
+                    <div class="user-component__text">
+                        <h4 class="user-component__title user-component__title--not-bold">Kakao talk</h4>
+                    </div>
+            </div>        
+        <div class="user-component_column">
+            <a href="#">QR code 인식 !</a>
+        </div>
+        </div>
     </div>
     </main>
     
@@ -100,7 +111,7 @@
             <li class="nav__btn"><a class="nav__link" href="./friends.html"><i class="fas fa-user fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="./chats.html"><span class="nav__notification badge">3</span>
             <i class="far fa-comment fa-2x"></i></a> </li>
-            <li class="nav__btn"><a class="nav__link" href="./find.html"><i class="fas fa-search fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="./skills.html"><i class="fas fa-search fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="./more.html"><div class="nav_option"></div><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>
