--- a/portfolio/more.html
+++ b/portfolio/more.html
@@ -34,7 +34,7 @@
             <div class="user-component__column">
             <img src="./image/4.jpg" class="user-component__avatar user-component__avatar--sm"/>
                  <div class="user-component__text">
-                     <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
+                     <h4 class="user-component__title user-component__title--not-bold"><a target="_blank" href="mailto:jylee1501@naver.com">jylee1501@naver.com</a></h4>
                      <h6 class="user-component__subtitle">01042516727</h6>
                  </div>
              </div>
@@ -78,7 +78,7 @@
             <li class="nav__btn"><a class="nav__link" href="./friends.html"><i class="far fa-user fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="./chats.html"><span class="nav__notification badge">3</span>
                 <i class="far fa-comment fa-2x"></i></a> </li>
-            <li class="nav__btn"><a class="nav__link" href="./find.html"><i class="fas fa-search fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="./skills.html"><i class="fas fa-search fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="./more.html"><div class="nav_option"></div><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>
