--- a/portfolio/setting.html
+++ b/portfolio/setting.html
@@ -57,7 +57,7 @@
             <li class="nav__btn"><a class="nav__link" href="./friends.html"><i class="far fa-user fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="./chats.html"><span class="nav__notification badge">3</span>
                 <i class="far fa-comment fa-2x"></i></a> </li>
-            <li class="nav__btn"><a class="nav__link" href="./find.html"><i class="fas fa-search fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="./skills.html"><i class="fas fa-search fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="./more.html"><div class="nav_option"></div><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>
