--- a/portfolio/skills.html
+++ b/portfolio/skills.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Find - Kokoa Clone</title>
+    <title>Skills</title>
     </head>
     <body>
       <div class="status-bar">
@@ -22,7 +22,7 @@
       </div>
     </div>
     <header class="screen-header">
-        <h1 class="screen-header__title">Find</h1>
+        <h1 class="screen-header__title">Skills</h1>
         <div class="screen-header__icon">
             <span><i class="fas fa-search fa-lg"></i></span>
             <span><a href="./setting.html"><i class="fas fa-cog fa-lg"></i></a></span>
@@ -30,10 +30,10 @@
     </header>
     <main class="main-screen">
         <div class="find-icons">
-           <div class="find-icons__icon"><i class="fas fa-qrcode"></i><span>QR</span></div>
-           <div class="find-icons__icon"><i class="far fa-address-book"></i><span>Add by Contact</span></div>
-           <div class="find-icons__icon"><i class="fas fa-fingerprint"></i><span>Add by ID</span></div>
-           <div class="find-icons__icon"><i class="far fa-envelope"></i><span>Invite</span></div>
+           <div class="find-icons__icon"><img class="skills" src="./image/html.png" alt=""><span>HTML</span></div>
+           <div class="find-icons__icon"><img class="skills" src="./image/css.png" alt=""><span>CSS</span></div>
+           <div class="find-icons__icon"><img class="skills js" src="./image/js.png" alt=""><span>Javascript</span></div>
+           <div class="find-icons__icon"><img class="skills" src="./image/react.png" alt=""><span>React</span></div>
         </div>
         <div class="recommended-friends">
             <h6 class="recommended-friends__title">recommended Friends</h6>
@@ -46,8 +46,8 @@
             </div>
             <div class="open-post">
                 <div class="open-post__column">
-                    <h5 class="open-post__title">#CODE</h5>
-                    <h6 class="open-post__hashtags">#HTML#CSS#JAVASCRIPT</h6>
+                    <h5 class="open-post__title">#Front-end</h5>
+                    <h6 class="open-post__hashtags">#HTML #CSS #JAVASCRIPT #REACT</h6>
                     <div class="open-post__members">
                         <img src="./image/4.jpg">
                         <span class="open-post__members-count">902 members</span>
@@ -72,7 +72,7 @@
             <li class="nav__btn"><a class="nav__link" href="./friends.html"><i class="far fa-user fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="./chats.html"><span class="nav__notification badge">3</span>
                 <i class="far fa-comment fa-2x"></i></a> </li>
-            <li class="nav__btn"><a class="nav__link" href="./find.html"><i class="fas fa-search fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="./skills.html"><i class="fas fa-search fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="./more.html"><div class="nav_option"></div><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>
