--- a/넷마블/index.html
+++ b/넷마블/index.html
@@ -6,28 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>넷마블</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="navbar">
-        <div class="nav">
-            <h1 class="logo">
-                <a href="#">넷마블문화재단</a>
-            </h1>
-        </div>
-        <div class="gnb">
-                <ul>
+    <div class="navWrap">
+        <div class="navbar clearfix">
+            <h1><a href="#">넷마블 문화재단</a></h1>
+            <div class="gnb">
+                <ul class="clearfix">
                     <li><a href="#">재단소개</a></li>
                     <li><a href="#">재단활동</a></li>
                     <li><a href="#">재단소식</a></li>
                 </ul>
             </div>
+        </div>    
     </div>
+
     <div class="slide">
-        <div></div>
     </div>
+
     <div class="home">
         <div class="title">
             <p class="title_01">문화를 만들고 인재를 키우고 <br> 마음을 나눕니다</p>
