--- a/넷마블/index.html
+++ b/넷마블/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="navWrap">
         <div class="navbar clearfix">
-            <h1><a href="#">넷마블 문화재단</a></h1>
+            <h1><a href="#">넷마블</a></h1>
             <div class="gnb">
                 <ul class="clearfix">
                     <li><a href="#">재단소개</a></li>
@@ -30,38 +30,22 @@
             <p class="title_02">넷마블문화재단은 문화적 가치 확산을 통해 우리 사회의 미래 경쟁력을 높여 가고자 <br> 다양한 공익 활동을 전개해 나가고 있습니다.</p>
         </div>
     </div>
-    <div class="link clearfix">
-        <div class="link_list">
-            <a href="#">
-                <div class="thumb1">
-                </div>
-                <div class="txtbox">
-                    <span class="tit">문화 만들기</span>
-                    <span class="txt">게임을 기반으로 다양한 문화적 가치를 공유하고 누구나<br> 즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 갑니다.</span>
-                </div>   
-            </a>
-        </div>  
-        <div class="link_list"> 
-            <a href="#">
-                <div class="thumb2">
-                </div>
-                <div class="txtbox">
-                    <span class="tit">인재 키우기</span>
-                    <span class="txt">미래 문화 산업을 이끌어 갈 가능성 있는 인재들을 발굴하고<br> 체계적인 성장 기회를 지원합니다.</span>
-                </div>
-            </a>
-        </div>    
-        <div class="link_list">
-            <a href="#">
-                <div class="thumb3">
-                </div>
-                <div class="txtbox">
-                    <span class="tit">마음 나누기</span>
-                    <span class="txt">나눔이 가진 영향력과 가치를 알리고 쉽게 동참할 수 있는<br> 기회를 제공하여 모두가 즐거운 나눔 문화를 확산해 갑니다.</span>
-                </div> 
-            </a>
-        </div> 
-    </div>
+     <div class="link">
+        <ul class="clearfix">
+            <li><a href="#"><img src="./image/link01.8c7a40e.jpg" alt=""><span>문화 만들기</span><p>게임을 기반으로 다양한 문화적 가치를 공유하고 누구나<br> 즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 갑니다.</p></a></li>
+            <li><a href="#"><img src="./image/link02.b7f7bba.jpg" alt=""><span>인재 키우기</span><p>미래 문화 산업을 이끌어 갈 가능성 있는 인재들을 발굴하고 <br> 체계적인 성장 기회를 지원합니다.</p></a></li>
+            <li><a href="#"><img src="./image/link03.73d78ef.jpg" alt=""><span>마음 나누기</span><p>나눔이 가진 영향력과 가치를 알리고 쉽게 동참할 수 있는 <br> 기회를 제공하여 모두가 즐거운 나눔 문화를 확산해 갑니다.</p></a></li>
+        </ul>
+        
+     </div>
+        <div class="yellowBox">
+            <div class="box1">
+                <p>우리는 <b>문화적 가치를 확산</b>하여 우리 사회의<br>미래 경쟁력을 높여갑니다</p><em>주요목적</em></div>
+            <div class="box2"><img src="./image/purpose.e6f7b36.jpg" alt=""></div>
+        </div>
+     <div class="main-notice">
+
+     </div>
     
 </body>
 </html>
