--- a/넷마블/practice.html
+++ b/넷마블/practice.html
@@ -52,6 +52,7 @@
 
         .gnb li a{ 
             display: block;
+            /* 가운데정렬 */
             text-align: center;
             line-height: 45px;
         }
