--- a/넷마블/netmarble.html
+++ b/넷마블/netmarble.html
@@ -32,7 +32,7 @@
      <!-- home -->
      <div class="title container clearfix">
         <p class="title_1">문화를 만들고 인재를 키우고 <br> 마음을 나눕니다</p>
-        <p class="title_2">넷마블문화재단은 문화적 가치 확산을 통해 우리 사회의 미래 경쟁력을 높여 가고자 다양한<br> 공익 활동을 전개해 나가고 있습니다.</p>
+        <p class="title_2">넷마블문화재단은 문화적 가치 확산을 통해 우리 사회의 미래 경쟁력을 높여 가고자 <br> 다양한 공익 활동을 전개해 나가고 있습니다.</p>
      </div>
 
      <!-- link -->
@@ -67,6 +67,13 @@
                 </a>
             </li>
         </ul>
+     </div>
+     <div class="container clearfix">
+        <div class="box">
+            <h2>우리는 <b>문화적 가치를 확산</b>하여 우리 사회의 <br> 미래 경쟁력을 높여갑니다</h2>
+            <p>주요목적</p>
+        </div>
+        <img src="./image/purpose.e6f7b36.jpg" alt="">
      </div>
 </body>
 </html>
