--- a/넷마블/netmarble.html
+++ b/넷마블/netmarble.html
@@ -36,44 +36,88 @@
      </div>
 
      <!-- link -->
-     <div class="container clearfix">
+     <div class="link container clearfix">
         <ul>
-            <li class="link">
+            <li>
                 <a href="#">
-                    <img src="./image/link01.8c7a40e.jpg" alt="">
+                    <img src="./image/link01.8c7a40e.jpg" alt=""></img>
+                        <div class="txtbox">
                         <h3>문화 만들기</h3>
                         <p>게임을 기반으로 다양한 문화적 가치를 공유하고 누구나 즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 갑니다.</p>
-                    </img>
+                        </div>
+                    </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="./image/link01.8c7a40e.jpg" alt=""> </img>
+                        <div class="txtbox">
+                        <h3>문화 만들기</h3>
+                        <p>게임을 기반으로 다양한 문화적 가치를 공유하고 누구나 즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 갑니다.</p>
+                        </div>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="./image/link01.8c7a40e.jpg" alt=""></img>
+                        <div class="txtbox">
+                        <h3>문화 만들기</h3>
+                        <p>게임을 기반으로 다양한 문화적 가치를 공유하고 누구나 즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 갑니다.</p> 
+                        </div>
                 </a>
             </li>
         </ul>
-        <ul>
-            <li class="link">
-                <a href="#">
-                    <img src="./image/link01.8c7a40e.jpg" alt="">
-                        <h3>문화 만들기</h3>
-                        <p>게임을 기반으로 다양한 문화적 가치를 공유하고 누구나 즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 갑니다.</p>
-                    </img>
-                </a>
-            </li>
-        </ul>
-        <ul>
-            <li class="link">
-                <a href="#">
-                    <img src="./image/link01.8c7a40e.jpg" alt="">
-                        <h3>문화 만들기</h3>
-                        <p>게임을 기반으로 다양한 문화적 가치를 공유하고 누구나 즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 갑니다.</p>
-                    </img>
-                </a>
-            </li>
-        </ul>
-     </div>
-     <div class="container clearfix">
+    </div>
+    <div class="container clearfix">
         <div class="box">
             <h2>우리는 <b>문화적 가치를 확산</b>하여 우리 사회의 <br> 미래 경쟁력을 높여갑니다</h2>
             <p>주요목적</p>
+        </div>    
+        <div class="img">
+            <img src="./image/purpose.e6f7b36.jpg" alt="">
         </div>
-        <img src="./image/purpose.e6f7b36.jpg" alt="">
-     </div>
+    </div>
+
+    <!-- 재단소식 -->
+    <div class="title2 container">
+        <p class="title_1">재단소식</p>
+        <div class="category">
+        <ul>
+            <li><a href="#">공지사항</a></li>
+            <li><a href="#">뉴스룸</a></li>
+            <li><a href="#">소셜미디어</a></li>
+        </ul>
+        </div>
+        <div class="link container">
+            <ul>
+                <li>
+                    <a href="#" class="clearfix">
+                        <img src="./image/link01.8c7a40e.jpg" alt=""></img>
+                            <div class="txtbox">
+                            <h3>문화 만들기</h3>
+                            <p>게임을 기반으로 다양한 문화적 가치를 공유하고 누구나 즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 갑니다.</p>
+                            </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./image/link01.8c7a40e.jpg" alt=""> </img>
+                            <div class="txtbox">
+                            <h3>문화 만들기</h3>
+                            <p>게임을 기반으로 다양한 문화적 가치를 공유하고 누구나 즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 갑니다.</p>
+                            </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./image/link01.8c7a40e.jpg" alt=""></img>
+                            <div class="txtbox">
+                            <h3>문화 만들기</h3>
+                            <p>게임을 기반으로 다양한 문화적 가치를 공유하고 누구나 즐겁게 참여할 수 있는 교육 및 여가 문화를 만들어 갑니다.</p> 
+                            </div>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
