--- a/넷마블/netmarble.html
+++ b/넷마블/netmarble.html
@@ -78,7 +78,8 @@
     </div>
     <!-- 재단소식 -->
     <div class="title2 container">
-        <div class="title_1">
+        <div class="clearfix">
+            <div class="title_1">
             <p>재단소식</p>
         </div>
         <div class="category">
@@ -88,6 +89,8 @@
                 <li><a href="#">소셜미디어</a></li>
             </ul>
         </div>
+        </div>
+        
         <div class="link">
             <ul class="clearfix">
                 <li>
@@ -123,7 +126,10 @@
         </div>
     </div>
     <!-- footer -->
-    <div class="footer container">
+    <div class="foot">
+
+    
+    <div class="footer container clearfix">
         <div class="footer_inner">
                 <a href="#"><img src="./image/bi-dark.9d78fda.png" alt=""></a>
                 <div class="family_site">
@@ -159,7 +165,8 @@
                     </ul>
                 </div>
         </div> 
-    </div>    
+    </div> 
+ </div>  
 </body>
 
 </html>
