--- a/가비아/index.html
+++ b/가비아/index.html
@@ -42,7 +42,8 @@
     <!-- main -->
     <div class="container">
         <div class="company clearfix">
-        <ul>
+            <div class="company_link">   
+            <ul>
             <li>
                 <a href="#">
                     <p class="area_link">IR공고 ></p>
@@ -71,8 +72,10 @@
                     <span>KRX 2022.09.27</span>
                 </a>
             </li>
-        </ul>
-        <ul>
+            </ul>
+            </div>
+            <div class="company_intro">
+            <ul>
             <li>
                 <img src="./image/service1_pc.svg" alt="">
                 <a href="#">
@@ -95,9 +98,11 @@
                 </a>
             </li>
         </ul>
-    </div>
+        </div>
+        </div>
     </div>
     <div class="culture">
+        <div class="container">
             <div class="culture_title">
                 <h3>Gabia Culture</h3>
                 <i class="fa-regular fa-circle-arrow-up-right"></i>
@@ -105,15 +110,18 @@
             <div class="culture_content">
                 <h2>가비아는 새로운 사람과의 소통을 통해 <br> 스스로 문화를 만들어 갑니다</h2>
             </div>
+        </div>
+            
     </div>    
     <div class="job">
-        <div class="jobbox">
+        <div class="job_detail">
             <p>가비아의 일과 사람들을 확인해보세요</p>
             <a href="#">직무소개 바로가기</a>
         </div>
     </div>
     <!-- footer -->
     <div class="footer">
+        <div class="clearfix">
         <div class="footer_left">
             <div class="footer_link">
                 <a href="#">가비아 </a>
@@ -145,6 +153,7 @@
                 <a href="#"><img src="./image/footer_ico_naverpost.svg" alt=""></a>
             </div>
         </div>
+    </div>
     </div>
 </body>    
     <script src="https://kit.fontawesome.com/b9c3c0b1e7.js" crossorigin="anonymous"></script>
