--- a/넷마블/netmarble.html
+++ b/넷마블/netmarble.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>넷마블</title>
     <link rel="stylesheet" href="./netmarble.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.2/swiper-bundle.css" integrity="sha512-15OzXDrYC/wTgcjNDIx6+2LiAHCPnS9DiKQj/dhgdRMpdW+W4AoSjxism+gRaDobBaFN+UONPGic1ttu5mpWxg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -25,9 +26,37 @@
             </div>
         </div>
     </div>
-    <!-- slide -->
-    <div class="slide">
-
+    <!-- swiper -->
+    <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="./image/banner01.jpg" alt="">
+                <h1>게임소통학교</h1>
+                <p>게임으로 소통하고 게임으로 가까워지는 가족</p>
+            </div>
+          <div class="swiper-slide">
+            <img src="./image/banner02.jpg" alt="">
+                <h1>전국 장애학생 <br> e페스티벌</h1>
+                <p>게임 안에서 하나 되는 모두의 축제</p>
+            </div>
+            <div class="swiper-slide">
+                <img src="./image/banner03.jpg" alt="">
+                    <h1>게임아카데미</h1>
+                    <p>미래의 꿈 게임에 담다</p>
+                </div>
+            <div class="swiper-slide">
+            <img src="./image/banner04.jpg" alt="">
+                <h1>어깨동무문고</h1>
+                <p>다름을 이해하는 모두의 동화</p>
+            </div>
+            <div class="swiper-slide">
+                <img src="./image/banner05.jpg" alt="">
+                    <h1>견학프로그램</h1>
+                    <p>나의 게임 산업 탐방기</p>
+            </div>
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
     </div>
     <!-- home -->
     <div class="title container clearfix">
@@ -98,7 +127,6 @@
                         <img src="./image/75f1ec08d4024494994f04c75e33ad9b_1655951509048_lp.jpg" alt=""></img>
                         <div class="txt2">
                             <h3>제 14회 게임콘서트 개최 안내</h3>
-                            <p>9월 게임콘서트 참여하기 링크</p>
                             <p>공지사항 2022.09.23</p>
                         </div>
                     </a>
@@ -138,8 +166,6 @@
                     </ul>
                     <button type="button" class="family">Family Site</button>
                 </div>
-                
-                
                 <div class="copyright">
                     <p>서울특별시 구로구 디지털로26길 38, G-Tower 넷마블</p>
                     <p>Copyright Netmarble Corp.All Rights Reserved.</p>
@@ -162,6 +188,16 @@
                 </div>
         </div> 
     </div> 
- </div>  
+ </div> 
+  <!--swiper  -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.2/swiper-bundle.min.js" integrity="sha512-dPYTaB+Ip4gAl9vo6U0jSmI8v1AZKjPKH367mfo7pR5gLf1IKpjm3bIXIwm+MmYWEf0eiBEWSBqE+MdKUx0jfg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script>
+    var swiper = new Swiper(".mySwiper", {
+      navigation: {
+        nextEl: ".swiper-button-next",
+        prevEl: ".swiper-button-prev",
+      },
+    });
+  </script>
 </body>
 </html>
