--- a/넷마블/netmarble.html
+++ b/넷마블/netmarble.html
@@ -87,12 +87,12 @@
         </div>
     </div>
     <!-- home -->
-    <div class="title container clearfix">
+    <div class="title container clearfix pd150">
         <p class="title_1">문화를 만들고 인재를 키우고 <br> 마음을 나눕니다</p>
         <p class="title_2">넷마블문화재단은 문화적 가치 확산을 통해 우리 사회의 미래 경쟁력을 높여 가고자 <br> 다양한 공익 활동을 전개해 나가고 있습니다.</p>
     </div>
     <!-- link -->
-    <div class="link container">
+    <div class="link container pd150">
         <ul class="clearfix">
             <li>
                 <a href="#">
@@ -134,7 +134,7 @@
         </div>
     </div>
     <!-- 재단소식 -->
-    <div class="title2 container">
+    <div class="title2 container pd150">
         <div class="clearfix">
             <div class="title_1">
                 <p>재단소식</p>
